--- a/app/src/main/res/layout/act_imagecache_single.xml
+++ b/app/src/main/res/layout/act_imagecache_single.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray_shallow"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -41,51 +41,78 @@
         android:text="*** 缓存成功与否请查看log日志: (请先缓存再展示)"
         android:textColor="@color/md_red_700" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <RelativeLayout style="@style/rl_title_public">
 
-        <Button
-            android:id="@+id/btn_image_cache"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/public_high"
-            android:layout_margin="@dimen/margin_ten"
-            android:background="@drawable/corners_test_button"
-            android:text="缓存图片"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:visibility="visible" />
+        <View
+            android:id="@+id/vertical_line"
+            style="@style/rl_tv_title_view_vertical_line"
+            android:layout_centerVertical="true"
+            android:layout_marginBottom="@dimen/margin_five" />
 
-        <Button
-            android:id="@+id/btn_display_image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/public_high"
-            android:layout_below="@id/btn_image_cache"
-            android:layout_margin="@dimen/margin_ten"
-            android:background="@drawable/corners_test_button"
-            android:text="展示缓存"
-            android:textAllCaps="false"
-            android:textColor="@color/white" />
+        <View style="@style/view_horizontal_line" />
 
-        <Button
-            android:id="@+id/btn_remove_image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/public_high"
-            android:layout_below="@id/btn_display_image"
-            android:layout_margin="@dimen/margin_ten"
-            android:background="@drawable/corners_test_button"
-            android:text="删除缓存"
-            android:textAllCaps="false"
-            android:textColor="@color/white" />
-
+        <TextView
+            style="@style/rl_tv_title_public_main"
+            android:layout_toRightOf="@id/vertical_line"
+            android:text="图片缓存( *** 缓存结果请查看log日志！！！ )" />
 
     </RelativeLayout>
 
+    <View style="@style/view_horizontal_line" />
+
+    <LinearLayout style="@style/linear_contain_public">
+
+        <RelativeLayout
+            android:id="@+id/cache_single_image"
+            style="@style/linear_contain_public_rl">
+
+            <TextView
+                style="@style/tv_main"
+                android:layout_centerInParent="true"
+                android:text="缓存" />
+        </RelativeLayout>
+
+        <View style="@style/view_vertical_line" />
+
+        <RelativeLayout
+            android:id="@+id/display_local_image"
+            style="@style/linear_contain_public_rl">
+
+
+            <TextView
+                style="@style/tv_main"
+                android:layout_centerInParent="true"
+                android:text="展示" />
+
+
+        </RelativeLayout>
+
+        <View style="@style/view_vertical_line" />
+
+        <RelativeLayout
+            android:id="@+id/delete_cache"
+            style="@style/linear_contain_public_rl">
+
+            <TextView
+                style="@style/tv_main"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="删除缓存"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <View style="@style/view_horizontal_line" />
+
+
     <ImageView
         android:id="@+id/image"
-        android:layout_width="@dimen/margin_one_hundred_fifty"
-        android:layout_height="@dimen/margin_one_hundred_fifty"
+        android:layout_width="@dimen/margin_two_hundred"
+        android:layout_height="@dimen/margin_two_hundred"
         android:layout_centerInParent="true"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_ten" />
 
 </LinearLayout>
