--- a/app/src/main/res/layout/act_test_xutils_get.xml
+++ b/app/src/main/res/layout/act_test_xutils_get.xml
@@ -34,6 +34,7 @@
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
+        android:id="@+id/rl_xutils_get"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_three_hundred"
         android:layout_alignParentLeft="true"
@@ -42,16 +43,22 @@
         android:background="@color/white">
 
         <EditText
-            android:textColor="@color/main"
-            android:textSize="@dimen/text_size_sixteen"
             android:id="@+id/et_show_text"
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_three_hundred"
             android:background="@null"
             android:focusable="false"
-            android:gravity="center" />
+            android:gravity="center"
+            android:textColor="@color/main"
+            android:textSize="@dimen/text_size_sixteen" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/progress"
+        style="@style/tv_main"
+        android:layout_below="@id/rl_xutils_get"
+        android:layout_marginTop="@dimen/margin_ten" />
 
 
     <Button
