--- a/app/src/main/res/layout/act_test_volley_post.xml
+++ b/app/src/main/res/layout/act_test_volley_post.xml
@@ -34,6 +34,7 @@
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
+        android:id="@+id/rl_volley_post"
         android:layout_width="match_parent"
         android:layout_height="@dimen/margin_three_hundred"
         android:layout_alignParentLeft="true"
@@ -52,7 +53,11 @@
             android:textSize="@dimen/text_size_sixteen" />
 
     </LinearLayout>
-
+    <TextView
+        android:id="@+id/progress"
+        style="@style/tv_main"
+        android:layout_below="@id/rl_volley_post"
+        android:layout_marginTop="@dimen/margin_ten" />
 
     <Button
         android:id="@+id/btn_send"
