--- a/app/src/main/res/layout/act_test_hello_chart.xml
+++ b/app/src/main/res/layout/act_test_hello_chart.xml
@@ -18,7 +18,7 @@
         <TextView
             android:id="@+id/title"
             style="@style/AppCompat_toolbar_text"
-            android:text="Hello Chart" />
+            android:text="折线图" />
 
         <ImageButton
             android:id="@+id/refresh"
