--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
         android:id="@+id/player_list_video"
         android:layout_width="match_parent"
-        android:layout_height="190dp" />
+        android:layout_height="@dimen/margin_one_hundred_eighty" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="12dp"
-            android:src="@drawable/sun" />
+            android:src="@null" />
 
         <TextView
             android:id="@+id/tv_video_userName"
@@ -30,19 +30,18 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="12dp"
             android:layout_toRightOf="@id/img_video_icon"
-            android:text="空城旧梦" />
+            android:text="播放列表" />
 
         <TextView
             android:id="@+id/tv_video_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
-            android:drawablePadding="4dp"
-            android:drawableLeft="@drawable/sun"
-            android:text="21"
-            android:textSize="12sp" />
+            android:drawablePadding="4dp" />
 
         <TextView
             android:layout_width="wrap_content"
