--- a/mincat/src/main/res/values/styles.xml
+++ b/mincat/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
         <item name="android:layout_height">@dimen/public_high</item>
         <item name="android:layout_alignParentBottom">true</item>
         <item name="android:background">@drawable/corners_bg_main</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColor">@color/text_color_selector</item>
         <item name="android:textSize">@dimen/text_size_sixteen</item>
         <item name="android:layout_margin">@dimen/margin_ten</item>
     </style>
