--- a/app/src/main/res/layout/act_operation_adapter.xml
+++ b/app/src/main/res/layout/act_operation_adapter.xml
@@ -18,19 +18,23 @@
         <TextView
             android:id="@+id/title"
             style="@style/AppCompat_toolbar_text"
-            android:text="操作Adapter" />
+            android:text="操作列表" />
 
         <Button
             android:id="@+id/refresh"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/margin_twenty"
             android:layout_centerVertical="true"
-            android:layout_gravity="right|center_vertical"
+            android:layout_gravity="right"
             android:layout_marginLeft="@dimen/margin_ten"
             android:layout_marginRight="@dimen/margin_ten"
             android:background="@null"
+            android:gravity="right"
+            android:paddingRight="@dimen/margin_five"
             android:text="清空"
-            android:visibility="visible" />
+            android:textSize="@dimen/text_size_sixteen"
+            android:textStyle="bold"
+            android:visibility="gone" />
     </android.support.v7.widget.Toolbar>
 
     <android.support.v4.widget.SwipeRefreshLayout
