--- a/app/src/main/res/layout/adapter_test_delete.xml
+++ b/app/src/main/res/layout/adapter_test_delete.xml
@@ -16,11 +16,11 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="@dimen/public_forty"
-            android:layout_height="@dimen/public_forty"
+            android:layout_width="@dimen/margin_fifty"
+            android:layout_height="@dimen/margin_fifty"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/margin_ten"
-            android:background="@drawable/message_01" />
+            android:background="@drawable/icon_seize_a_seat" />
 
         <TextView
             android:id="@+id/tv_desc"
@@ -30,22 +30,20 @@
             android:layout_marginLeft="@dimen/margin_twenty"
             android:layout_toRightOf="@id/image"
             android:text="世界这么大我想去看看"
-            android:lines="2"
-            android:textColor="@color/md_orange_500"
+            android:lines="1"
+            android:textColor="@color/main_text_color"
             android:textSize="@dimen/text_size_thirteen" />
 
         <Button
             android:id="@+id/btn_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/margin_twenty_five"
-            android:layout_alignParentBottom="true"
+            android:layout_width="@dimen/margin_fifteen"
+            android:layout_height="@dimen/margin_fifteen"
+            android:layout_marginTop="@dimen/margin_ten"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="@dimen/margin_five"
-            android:layout_marginRight="@dimen/margin_five"
-            android:background="@null"
-            android:text="删除"
+            android:layout_marginRight="@dimen/margin_ten"
+            android:background="@drawable/clear_button"
             android:textColor="@color/main"
-            android:textSize="@dimen/text_size_fourteen" />
+            android:textSize="@dimen/text_size_thirteen" />
 
 
     </RelativeLayout>
