--- a/mincat/src/main/res/values/styles.xml
+++ b/mincat/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_eighteen</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
     </style>
     <style name="test_button">
         <item name="android:layout_width">match_parent</item>
